# centauro_ros_nav

./: CMakeLists.txt  README.md  backward_plugin.xml  forward_plugin.xml  package.xml  test.rviz
config/centauro/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
config/kyon/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
include/centauro_ros_nav/: NavCtrlManager.h  ValidTargetSelectorManager.h  backward_recovery.h  forward_recovery.h
launch/: centauro_nav.launch  centauro_nav_exploration.launch  kyon_nav.launch
maps/: empty.pgm  empty.yaml
python/: navigation.py  pub_chair_position.py
src/: .box_extraction_ground.cpp.swo  .box_extraction_ground.cpp.swp  .remove_close_points.cpp.swn  .remove_close_points.cpp.swo  .remove_close_points.cpp.swp  NavCtrlManager.cpp  NavCtrlNode.cpp  ValidTargetSelector.cpp  ValidTargetSelectorManager.cpp  ValidTargetSelectorNode.cpp  backward_recovery.cpp  cmd_add_stamp.cpp  forward_recovery.cpp
srv/: AskNavPlan.srv  SendCandidateNavTarget.srv
